--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
+# platform uses Python 3.8
+# waiting for AWS >= 3.10 update:
+# https://docs.aws.amazon.com/lambda/latest/dg/lambda-python.html
+# TODO: when we do also test Bites with newer dependencies
 bs4==0.0.1
-cryptography==3.3.2
-feedparser==5.2.1
-Flask==1.1.2
+cryptography==39.0.1
+feedparser==6.0.10
+Flask==2.3.2
 gender-guesser==0.4.0
 joblib==1.2.0
-MarkupSafe==1.1.1
+MarkupSafe
 more-itertools==8.3.0
 nltk==3.6.6
 pandas==1.1.4
-pytest==6.1.0
-pytest-asyncio==0.18.2
-pytest-cov==2.9.0
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.27.1
@@ -25,3 +26,8 @@ passlib==1.7.4
 python-jose==3.3.0
 python-multipart==0.0.5
 sqlmodel==0.0.6
+setuptools==65.5.1  # needed for feedparser 5.2.1
+# test deps
+pytest==7.2.0
+pytest-cov==4.0.0
+pytest-asyncio==0.20.3
