--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ joblib==1.2.0
 MarkupSafe
 more-itertools==8.3.0
 nltk==3.6.6
-pandas==1.1.4
+pandas
 python-dateutil==2.8.1
 pytz==2020.1
 requests==2.27.1
